Add project details for various data science initiatives
- Created HTML files for the following projects:
  - Digital Inspector: AI for equipment inspection in collaboration with Petrobras.
  - Distribution: Recommendation system for assigning prosecutors in court proceedings.
  - EDUVIS: Online tool for assembling dashboards based on instructors' preferences.
  - Ginga NCL: Middleware for the Japanese-Brazilian Digital TV System.
  - IAGO: AI for diagnosing and forecasting hydrogen sulfide levels in oil refineries.
  - Rural Property Valuation: AI to support rural property valuation processes.
  - Text Similarity: Data science approach for locating similar legal texts.
  - Soybean Yield Forecast: AI to predict soybean yields in Mato Grosso.
  - User Interaction Analysis: Analyzing user interactions to enhance web system experience.

--- a/body/modals/user-interaction-analysis.html
+++ b/body/modals/user-interaction-analysis.html
@@ -1,4 +1,5 @@
-<div class="portfolio-modal modal fade" id="projectsModalUserInteractionAnalysis" tabindex="-1" role="dialog" aria-hidden="true">
+<!-- <div class="portfolio-modal modal fade show" id="projectsModalUserInteractionAnalysis" tabindex="-1" role="dialog" style="display: block; padding-right: 15px;" aria-modal="true"> -->
+<div class="portfolio-modal modal fade" id="projectsModalUserInteractionAnalysis" tabindex="-1" role="dialog" aria-hidden="false">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" /></div>
