Refactor project links and update Digital Inspector project details

--- a/body/sections/projects.html
+++ b/body/sections/projects.html
@@ -61,7 +61,8 @@
             
             <div class="col-lg-4 col-sm-6 mb-4">
                 <div class="portfolio-item">
-                    <a class="portfolio-link" data-toggle="modal" href="#projectsModalDigitalInspector">
+                    <!-- <a class="portfolio-link" data-toggle="modal" href="#projectsModalDigitalInspector"> -->
+                    <a class="portfolio-link" href="projects/digital-inspector.html">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <h3>Read More</h3>
