--- a/projects/cacuria.html
+++ b/projects/cacuria.html
@@ -35,22 +35,15 @@
         </div>
     </nav>
 
-    <!-- <header class="masthead">
-        <div class="container">
-            <div class="masthead-subheading">Welcome to my Page!</div>
-        </div>
-    </header> -->
-
     <section class="page-section bg-white portfolio-section" id="projects">
         <div class="container" style="margin-top: 27px;">
             <div class="text-center">
+                <img class="img-fluid d-block mx-auto" src="../assets/img/projects/cacuria/logo.png" alt="" />
                 <h2 class="section-heading text-uppercase">Cacuriá</h2>
                 <h3 class="section-subheading text-muted">An authoring tool to create educational content</h3>
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-12">
-                    <img class="img-fluid d-block mx-auto" src="../assets/img/projects/cacuria/logo.png"
-                        alt="" />
                     <p class="text-muted-justified">
                         During my time as an M.Sc. candidate at LAWS lab. - <a class="link" target="_blank"
                         href="https://portalpadrao.ufma.br/site">UFMA</a> between 2013 and 2015,
@@ -152,9 +145,6 @@
                                 href="http://200.130.99.114/OA_Algoritmo/">Sorting Algorithms</a>.
                         </li> -->
                     </ul>
-                    <!-- <button class="btn btn-primary" data-dismiss="modal" type="button">
-                        <i class="fas fa-times mr-1"></i>Close Project
-                    </button> -->
                 </div>
             </div>
         </div>
