--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div id="project-user-interaction-analysis"></div>
     <div id="project-rural-property-valuation"></div>
     <div id="project-soybean-yield-forecast"></div>
-    <div id="project-digital-inspector"></div>
+    <!-- <div id="project-digital-inspector"></div> -->
     <div id="project-iago"></div>
     <div id="project-eduvis"></div>
     <div id="project-similarity"></div>
