Refactor project HTML files to standardize structure and improve readability
- Converted modal structures to section format for better accessibility and SEO.
- Added consistent navigation and footer elements across all project pages.
- Enhanced project descriptions with clearer language and formatting.
- Implemented RESTful API integration for dynamic content loading in project sections.
- Updated links and resources to ensure they point to the correct locations.

--- a/body/sections/projects.html
+++ b/body/sections/projects.html
@@ -7,7 +7,8 @@
         <div class="row">
             <div class="col-lg-4 col-sm-6 mb-4">
                 <div class="portfolio-item">
-                    <a class="portfolio-link" data-toggle="modal" href="#projectsModalUserInteractionAnalysis">
+                    <!-- <a class="portfolio-link" data-toggle="modal" href="#projectsModalUserInteractionAnalysis"> -->
+                    <a class="portfolio-link" href="projects/user-interaction-analysis.html">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <h3>Read More</h3>
@@ -25,7 +26,8 @@
 
             <div class="col-lg-4 col-sm-6 mb-4">
                 <div class="portfolio-item">
-                    <a class="portfolio-link" data-toggle="modal" href="#projectsModalRuralPropertyValuation">
+                    <!-- <a class="portfolio-link" data-toggle="modal" href="#projectsModalRuralPropertyValuation"> -->
+                    <a class="portfolio-link" href="projects/rural-property-valuation.html">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <h3>Read More</h3>
@@ -43,7 +45,8 @@
 
             <div class="col-lg-4 col-sm-6 mb-4">
                 <div class="portfolio-item">
-                    <a class="portfolio-link" data-toggle="modal" href="#projectsModalSoybeanYieldForecast">
+                    <!-- <a class="portfolio-link" data-toggle="modal" href="#projectsModalSoybeanYieldForecast"> -->
+                    <a class="portfolio-link" href="projects/soybean-yield-forecast.html">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <h3>Read More</h3>
@@ -80,7 +83,8 @@
 
             <div class="col-lg-4 col-sm-6 mb-4">
                 <div class="portfolio-item">
-                    <a class="portfolio-link" data-toggle="modal" href="#projectsModalIAGO">
+                    <!-- <a class="portfolio-link" data-toggle="modal" href="#projectsModalIAGO"> -->
+                    <a class="portfolio-link" href="projects/iago.html">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <h3>Read More</h3>
@@ -98,7 +102,8 @@
 
             <div class="col-lg-4 col-sm-6 mb-4">
                 <div class="portfolio-item">
-                    <a class="portfolio-link" data-toggle="modal" href="#projectsModalEduvis">
+                    <!-- <a class="portfolio-link" data-toggle="modal" href="#projectsModalEduvis"> -->
+                    <a class="portfolio-link" href="projects/eduvis.html">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <h3>Read More</h3>
@@ -116,7 +121,8 @@
 
             <div class="col-lg-4 col-sm-6 mb-4">
                 <div class="portfolio-item">
-                    <a class="portfolio-link" data-toggle="modal" href="#projectsModalSimilarity">
+                    <!-- <a class="portfolio-link" data-toggle="modal" href="#projectsModalSimilarity"> -->
+                    <a class="portfolio-link" href="projects/similarity.html">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <h3>Read More</h3>
@@ -134,7 +140,8 @@
 
             <div class="col-lg-4 col-sm-6 mb-4">
                 <div class="portfolio-item">
-                    <a class="portfolio-link" data-toggle="modal" href="#projectsModalDistribution">
+                    <!-- <a class="portfolio-link" data-toggle="modal" href="#projectsModalDistribution"> -->
+                    <a class="portfolio-link" href="projects/distribution.html">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <h3>Read More</h3>
@@ -152,7 +159,8 @@
 
             <div class="col-lg-4 col-sm-6 mb-4">
                 <div class="portfolio-item">
-                    <a class="portfolio-link" data-toggle="modal" href="#projectsModalGinga">
+                    <!-- <a class="portfolio-link" data-toggle="modal" href="#projectsModalGinga"> -->
+                    <a class="portfolio-link" href="projects/ginga.html">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <h3>Read More</h3>
@@ -163,7 +171,7 @@
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Ginga NCL</div>
                         <div class="portfolio-caption-subheading text-muted"><b>Embedded Systems, Multimedia</b></div>
-                        <div class="portfolio-caption-subheading text-muted"> c, c++, gstreamer, lua, ncl, gdb</div>
+                        <div class="portfolio-caption-subheading text-muted">c, c++, gstreamer, lua, ncl, gdb</div>
                     </div>
                 </div>
             </div>
@@ -182,7 +190,7 @@
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Cacuriá</div>
                         <div class="portfolio-caption-subheading text-muted"><b>Multimedia</b></div>
-                        <div class="portfolio-caption-subheading text-muted"> c++, qt, javascript, ncl, lua</div>
+                        <div class="portfolio-caption-subheading text-muted">c++, qt, javascript, ncl, lua</div>
                     </div>
                 </div>
             </div>
