--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
     <div id="footer"></div>
     
     <!-- Projects Modals-->
-    <div id="project-user-interaction-analysis"></div>
-    <div id="project-rural-property-valuation"></div>
-    <div id="project-soybean-yield-forecast"></div>
+    <!-- <div id="project-user-interaction-analysis"></div> -->
+    <!-- <div id="project-rural-property-valuation"></div> -->
+    <!-- <div id="project-soybean-yield-forecast"></div> -->
     <!-- <div id="project-digital-inspector"></div> -->
-    <div id="project-iago"></div>
-    <div id="project-eduvis"></div>
-    <div id="project-similarity"></div>
-    <div id="project-distribution"></div>
-    <div id="project-ginga"></div>
+    <!-- <div id="project-iago"></div> -->
+    <!-- <div id="project-eduvis"></div> -->
+    <!-- <div id="project-similarity"></div> -->
+    <!-- <div id="project-distribution"></div> -->
+    <!-- <div id="project-ginga"></div> -->
     <!-- <div id="project-cacuria"></div> -->
 
     <!-- Bootstrap core JS-->
