--- a/projects/distribution.html
+++ b/projects/distribution.html
@@ -1,57 +1,105 @@
-<div class="portfolio-modal modal fade" id="projectsModalDistribution" tabindex="-1" role="dialog"
-        aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" /></div>
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-8">
-                            <div class="modal-body">
-                                <h2 class="text-uppercase">Distribution of Court Proceedings</h2>
-                                <p class="item-intro text-muted">A recommendation system to assign prosecutors in court
-                                    proceedings</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/projects/distribution/logo.png"
-                                    alt="" />
-                                <p class="text-muted-justified">
-                                    
-                                    As a Data Scientist at <a class="link" target="_blank" href='https://ecoa.puc-rio.br/'>ECOA PUC-Rio</a>
-                                    in 2018, I had the privilege of leading a significant project aimed at enhancing the operational
-                                    efficiency of the <a class="link" target="_blank" href='http://www.mprj.mp.br'>Public Prosecution 
-                                    from Rio de Janeiro</a>.
-                                </p>
-                                <p class="text-muted-justified">
-                                    The objective of this project was to optimize the allocation of prosecutors to individual legal cases,
-                                    ensuring that each case was assigned to the most suitable prosecutor. To achieve this, we embarked on a
-                                    comprehensive data-driven initiative.
-                                </p>
-                                <p class="text-muted-justified">
-                                    This project began by acquiring extensive historical lawsuit data, with a diverse array of metadata such 
-                                    as case type, cause, and origin. This dataset tracked the legal journey of lawsuits from the <a class="link"
-                                    target="_blank" href='http://www.tjrj.jus.br'> Court of Law from Rio de Janeiro</a> to the Public Prosecution.
-                                    To prepare this data for analysis, we meticulously executed a data cleansing process, which proved to be a 
-                                    labor-intensive yet indispensable phase of the project.
-                                </p>
-                                <p class="text-muted-justified">
-                                    Through statistical methods, we unearthed critical correlations within the dataset. These correlations were 
-                                    instrumental in the development of a robust decision tree model to automate the task of matching the most
-                                    appropriate prosecutor to each lawsuit. This machine learning model was deliberately chosen for its
-                                    interpretability, allowing us to elucidate its learning process and gain insights into its decision-making
-                                    mechanisms.
-                                </p>
-                                <p class="text-muted-justified">
-                                    We operationalized our model by deploying it as a RESTful API service. By doing so, we enabled seamless 
-                                    integration into the existing workflow of the Public Prosecution, allowing them to input relevant case 
-                                    features and receive instant recommendations for the most suitable prosecutor. This project not only 
-                                    streamlined the allocation process but also improved the efficiency of the Public Prosecution from 
-                                    Rio de Janeiro.
-                                </p>
+<html lang="en">
 
-                                <button class="btn btn-primary" data-dismiss="modal" type="button"><i
-                                        class="fas fa-times mr-1"></i>Close Project</button>
-                            </div>
-                        </div>
-                    </div>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>About André Luiz</title>
+    <link rel="icon" type="image/x-icon" href="../assets/img/favicon.png" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v5.12.1/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="../css/styles.css" rel="stylesheet" />
+</head>
+
+<body id="page-top">
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-shrink" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand js-scroll-trigger" href="../index.html#page-top">Andre Luiz</a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars ml-1"></i></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav text-uppercase ml-auto">
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#about">About me</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#analyses">Analyses</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#publications">Publications</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#contact">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <section class="page-section bg-white portfolio-section" id="projects">
+        <div class="container" style="margin-top: 27px;">
+            <div class="text-center">
+                <img class="img-fluid d-block mx-auto" src="../assets/img/projects/distribution/logo.png" alt="" />
+                <h2 class="section-heading text-uppercase">Distribution of Court Proceedings</h2>
+                <h3 class="section-subheading text-muted">A recommendation system to assign prosecutors in court</h3>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-12">
+                    <p class="text-muted-justified">                                    
+                        As a Data Scientist at <a class="link" target="_blank" href='https://ecoa.puc-rio.br/'>ECOA PUC-Rio</a>
+                        in 2018, I had the privilege of leading a significant project aimed at enhancing the operational
+                        efficiency of the <a class="link" target="_blank" href='http://www.mprj.mp.br'>Public Prosecution 
+                        from Rio de Janeiro</a>.
+                    </p>
+                    <p class="text-muted-justified">
+                        The objective of this project was to optimize the allocation of prosecutors to individual legal cases,
+                        ensuring that each case was assigned to the most suitable prosecutor. To achieve this, we embarked on a
+                        comprehensive data-driven initiative.
+                    </p>
+                    <p class="text-muted-justified">
+                        This project began by acquiring extensive historical lawsuit data, with a diverse array of metadata such 
+                        as case type, cause, and origin. This dataset tracked the legal journey of lawsuits from the <a class="link"
+                        target="_blank" href='http://www.tjrj.jus.br'> Court of Law from Rio de Janeiro</a> to the Public Prosecution.
+                        To prepare this data for analysis, we meticulously executed a data cleansing process, which proved to be a 
+                        labor-intensive yet indispensable phase of the project.
+                    </p>
+                    <p class="text-muted-justified">
+                        Through statistical methods, we unearthed critical correlations within the dataset. These correlations were 
+                        instrumental in the development of a robust decision tree model to automate the task of matching the most
+                        appropriate prosecutor to each lawsuit. This machine learning model was deliberately chosen for its
+                        interpretability, allowing us to elucidate its learning process and gain insights into its decision-making
+                        mechanisms.
+                    </p>
+                    <p class="text-muted-justified">
+                        We operationalized our model by deploying it as a RESTful API service. By doing so, we enabled seamless 
+                        integration into the existing workflow of the Public Prosecution, allowing them to input relevant case 
+                        features and receive instant recommendations for the most suitable prosecutor. This project not only 
+                        streamlined the allocation process but also improved the efficiency of the Public Prosecution from 
+                        Rio de Janeiro.
+                    </p>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
+
+    <!-- Footer-->
+    <div id="footer"></div>
+
+    <!-- Bootstrap core JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+    <!-- Third party plugin JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    
+    <script>
+        const body = ['footer'];
+        body.forEach(b => {
+            fetch(`../body/${b}.html`)
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById(`${b}`).outerHTML = data;
+                })
+                .catch(error => console.error(`Error loading ${b}:`, error));
+        });
+    </script>
+</body>
+</html>
