--- a/projects/iago.html
+++ b/projects/iago.html
@@ -1,45 +1,98 @@
-<div class="portfolio-modal modal fade" id="projectsModalIAGO" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" /></div>
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-8">
-                        <div class="modal-body">
-                            <h2 class="text-uppercase">IAGO</h2>
-                            <p class="item-intro text-muted">Artificial Intelligence for Odor Management </p>
-                            <img class="img-fluid d-block mx-auto" src="assets/img/projects/iago/logo.png" alt="" />
-                            <p class="text-muted-justified">
-                                As a data scientist at <a class="link" target="_blank" href='https://www.exacta.inf.puc-rio.br/'>ExACTa PUC-Rio</a> in 2020, I executed a project focused on diagnosing and forecasting high levels of hydrogen sulfide (H2S), a poisonous, toxic, and hazardous gas frequently released in oil refineries from <a class="link" target="_blank" href='https://petrobras.com.br/en/'>Petrobras</a>. This problem posed a significant threat to the well-being and safety of a local community situated near a refinery in the northeast region from Brazil. This issue had garnered extensive coverage in various Brazilian news portals, including <a class="link" target="_blank" href='https://g1.globo.com/pe/pernambuco/noticia/2020/01/28/moradores-denunciam-problemas-de-saude-por-causa-de-cheiro-forte-de-gas-que-sai-de-refinaria-no-litoral-sul.ghtml'>g1</a>. The primary aim of this initiative was to provide essential information through an intuitive dashboard, enabling end-users to support their decision-making.
-                            </p>
-                            <p class="text-muted-justified">
-                                The project began with a thorough exploration and analysis of refinery historical data using
-                                statistical methods and visualization techniques. Through these analyses, we uncovered significant
-                                correlations and insights, particularly in conjunction with meteorological data, including wind
-                                direction and speed, humidity, and temperature.
-                            </p>
-                            <img class="img-fluid d-block mx-auto" src="assets/img/projects/iago/visualization.png"
-                                alt="" />
-                            <p class="text-muted-justified">
-                                Then, we developed a decision tree model to provide prescriptive information regarding H2S emissions. This machine learning model was deliberately chosen for its interpretability, allowing us to elucidate its learning process and gain insights into its decision-making mechanisms. Our model was engineered to forecast H2S levels based on a threshold defined by refinery operators.
-                            </p>
-                            <p class="text-muted-justified">
-                                To effectively present our model's results, we adopted Power BI as the platform for developing our dashboard. The central visualization component featured a bar and line chart, providing a visual representation of the predicted H2S emission rates. Additionally, we included a "Cards" tab within the dashboard to display meteorological data and potential factors contributing to H2S levels at any given time. It is worth emphasizing that the dashboard's interface was a collaborative effort, involving feedback from refinery operators, ensuring an intuitive and user-friendly interface.
-                            </p>
-                            <img class="img-fluid d-block mx-auto" src="assets/img/projects/iago/interface.png"
-                                alt="" />
-                            <p class="text-muted-justified">
-                                This project was particularly demanding due to the tight timeline for delivering a solution to mitigate the issue and protect the local population near the refinery. Fortunately, our model yielded favorable results, and the dashboard was well-received by refinery operators, facilitating their understanding of the factors contributing to high H2S levels. Subsequently, our solution was adopted across various Petrobras refineries throughout Brazil.
-                            </p>
-                            <!-- <ul class="list-inline">
-                                    <li>More information: <a class="link" target="_blank" href="https://www.researchgate.net/project/Learning-Analytics-Studies">Papers</a></li>
-                                </ul> -->
-                            <button class="btn btn-primary" data-dismiss="modal" type="button"><i
-                                    class="fas fa-times mr-1"></i>Close Project</button>
-                        </div>
-                    </div>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>About André Luiz</title>
+    <link rel="icon" type="image/x-icon" href="../assets/img/favicon.png" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v5.12.1/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="../css/styles.css" rel="stylesheet" />
+</head>
+
+<body id="page-top">
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-shrink" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand js-scroll-trigger" href="../index.html#page-top">Andre Luiz</a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars ml-1"></i></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav text-uppercase ml-auto">
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#about">About me</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#analyses">Analyses</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#publications">Publications</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#contact">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <section class="page-section bg-white portfolio-section" id="projects">
+        <div class="container" style="margin-top: 27px;">
+            <div class="text-center">
+                <img class="img-fluid d-block mx-auto" src="../assets/img/projects/iago/logo.png" alt="" />
+                <h2 class="section-heading text-uppercase">IAGO</h2>
+                <h3 class="section-subheading text-muted">Artificial Intelligence for Odor Management</h3>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-12">
+                    <p class="text-muted-justified">
+                        As a data scientist at <a class="link" target="_blank" href='https://www.exacta.inf.puc-rio.br/'>ExACTa PUC-Rio</a> in 2020, I executed a project focused on diagnosing and forecasting high levels of hydrogen sulfide (H2S), a poisonous, toxic, and hazardous gas frequently released in oil refineries from <a class="link" target="_blank" href='https://petrobras.com.br/en/'>Petrobras</a>. This problem posed a significant threat to the well-being and safety of a local community situated near a refinery in the northeast region from Brazil. This issue had garnered extensive coverage in various Brazilian news portals, including <a class="link" target="_blank" href='https://g1.globo.com/pe/pernambuco/noticia/2020/01/28/moradores-denunciam-problemas-de-saude-por-causa-de-cheiro-forte-de-gas-que-sai-de-refinaria-no-litoral-sul.ghtml'>g1</a>. The primary aim of this initiative was to provide essential information through an intuitive dashboard, enabling end-users to support their decision-making.
+                    </p>
+                    <p class="text-muted-justified">
+                        The project began with a thorough exploration and analysis of refinery historical data using
+                        statistical methods and visualization techniques. Through these analyses, we uncovered significant
+                        correlations and insights, particularly in conjunction with meteorological data, including wind
+                        direction and speed, humidity, and temperature.
+                    </p>
+                    <img class="img-fluid d-block mx-auto" src="../assets/img/projects/iago/visualization.png"
+                        alt="" />
+                    <p class="text-muted-justified">
+                        Then, we developed a decision tree model to provide prescriptive information regarding H2S emissions. This machine learning model was deliberately chosen for its interpretability, allowing us to elucidate its learning process and gain insights into its decision-making mechanisms. Our model was engineered to forecast H2S levels based on a threshold defined by refinery operators.
+                    </p>
+                    <p class="text-muted-justified">
+                        To effectively present our model's results, we adopted Power BI as the platform for developing our dashboard. The central visualization component featured a bar and line chart, providing a visual representation of the predicted H2S emission rates. Additionally, we included a "Cards" tab within the dashboard to display meteorological data and potential factors contributing to H2S levels at any given time. It is worth emphasizing that the dashboard's interface was a collaborative effort, involving feedback from refinery operators, ensuring an intuitive and user-friendly interface.
+                    </p>
+                    <img class="img-fluid d-block mx-auto" src="../assets/img/projects/iago/interface.png"
+                        alt="" />
+                    <p class="text-muted-justified">
+                        This project was particularly demanding due to the tight timeline for delivering a solution to mitigate the issue and protect the local population near the refinery. Fortunately, our model yielded favorable results, and the dashboard was well-received by refinery operators, facilitating their understanding of the factors contributing to high H2S levels. Subsequently, our solution was adopted across various Petrobras refineries throughout Brazil.
+                    </p>
+                    <!-- <ul class="list-inline">
+                            <li>More information: <a class="link" target="_blank" href="https://www.researchgate.net/project/Learning-Analytics-Studies">Papers</a></li>
+                        </ul> -->
                 </div>
             </div>
         </div>
-    </div>
-</div>
+    </section>
+
+    <!-- Footer-->
+    <div id="footer"></div>
+
+    <!-- Bootstrap core JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+    <!-- Third party plugin JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    
+    <script>
+        const body = ['footer'];
+        body.forEach(b => {
+            fetch(`../body/${b}.html`)
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById(`${b}`).outerHTML = data;
+                })
+                .catch(error => console.error(`Error loading ${b}:`, error));
+        });
+    </script>
+</body>
+</html>
