--- a/projects/rural-property-valuation.html
+++ b/projects/rural-property-valuation.html
@@ -1,66 +1,119 @@
-<div class="portfolio-modal modal fade" id="projectsModalRuralPropertyValuation" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" /></div>
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-8">
-                        <div class="modal-body">
-                            <h2 class="text-uppercase">Rural Property Valuation</h2>
-                            <p class="item-intro text-muted">Artificial Intelligence to Support Rural Property Valuation </p>
-                            <img class="img-fluid d-block mx-auto" src="assets/img/projects/rural-property-valuation/logo.jpg" alt="" />
-                            <p class="text-muted-justified">
-                                As Data Science Manager at <a class="link" target="_blank" href='https://gaivota.ai/'>Gaivota</a> in 2022
-                                and <a class="link" target="_blank" href='https://www.seedz.ag/'>Seedz</a> in 2023,
-                                I led a project focused on rural property valuation. This process involves determining the price of
-                                rural properties such as farms and agricultural land, which serves various purposes including
-                                securing credit, property insurance, estate division, and property transactions.
-                            </p>
-                            <p class="text-muted-justified">
-                                To begin our project, we initiated by conducting a comprehensive literature review to gain valuable
-                                insights into the field. During this phase, we identified pertinent research papers specifically 
-                                addressing this issue within the Brazilian context. These papers not only shed light on critical 
-                                features and methodologies but also illuminated valuable considerations for tackling this complex 
-                                problem.
-                            </p>
-                            <p class="text-muted-justified">
-                                Subsequent to the literature review, we proceeded with an extensive exploration of publicly 
-                                available datasets related to the valuation of bare land. It's important to note that our foremost 
-                                challenge at this stage was the absence of a comprehensive property price database. To overcome this 
-                                problem, we implemented a web crawler to extract pricing information and property specifications 
-                                (e.g., location, area) from real estate listing websites. Furthermore, we conducted geocoding to 
-                                obtain latitude and longitude coordinates, thereby enriching our dataset with geographic attributes 
-                                such as terrain and altitude. During the data distribution analysis, we identified a significant 
-                                data concentration in the Southeast region of Brazil. We implemented a rigorous feature selection 
-                                process, enabling us to retain only the most pertinent data while eliminating noise. Additionally, 
-                                we conducted meticulous data cleaning and outlier removal to ensure the quality of our dataset.
-                            </p>
-                            <p class="text-muted-justified">
-                                One key aspect of our analysis involved examining the correlation between the value of bare land 
-                                and other features, such as prices of commodities such as soybeans, corn, and cattle. Over the 
-                                period of our study, we observed a decrease in commodity prices throughout the year, accompanied 
-                                by an increase in rural land prices. This negative correlation was not a suitable variable to serve 
-                                as a reliable predictor in our model.
-                            </p>
-                            <p class="text-muted-justified">
-                                In our pursuit of predicting rural property values using the chosen features, we conducted a series 
-                                of experiments employing diverse machine learning methodologies. As a result, we attained outcomes 
-                                that can be characterized as reasonably promising. Nevertheless, an important lesson that emerged 
-                                from our endeavors was the necessity to enhance data quality and broaden data coverage nationwide. 
-                                These enhancements are essential to elevate the precision of our predictive model.
-                            </p>
-                            <p class="text-muted-justified">
-                                Furthermore, we deployed a Restful API to provide an interface for internal applications to access 
-                                our model. This project was quite challenging due to the limited data we had to work with. My 
-                                experience as a researcher was essential in helping us navigate and overcome the obstacles we faced. 
-                                I'm incredibly proud of the dedication and hard work our team put into this project.
-                            </p>
-                            <button class="btn btn-primary" data-dismiss="modal" type="button"><i
-                                    class="fas fa-times mr-1"></i>Close Project</button>
-                        </div>
-                    </div>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>About André Luiz</title>
+    <link rel="icon" type="image/x-icon" href="../assets/img/favicon.png" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v5.12.1/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="../css/styles.css" rel="stylesheet" />
+</head>
+
+<body id="page-top">
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-shrink" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand js-scroll-trigger" href="../index.html#page-top">Andre Luiz</a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars ml-1"></i></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav text-uppercase ml-auto">
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#about">About me</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#analyses">Analyses</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#publications">Publications</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#contact">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <section class="page-section bg-white portfolio-section" id="projects">
+        <div class="container" style="margin-top: 27px;">
+            <div class="text-center">
+                <img class="img-fluid d-block mx-auto" src="../assets/img/projects/rural-property-valuation/logo.jpg" alt="" />
+                <h2 class="section-heading text-uppercase">Rural Property Valuation</h2>
+                <h3 class="section-subheading text-muted">Artificial Intelligence to Support Rural Property Valuation</h3>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-12">
+                    <p class="text-muted-justified">
+                        As Data Science Manager at <a class="link" target="_blank" href='https://gaivota.ai/'>Gaivota</a> in 2022
+                        and <a class="link" target="_blank" href='https://www.seedz.ag/'>Seedz</a> in 2023,
+                        I led a project focused on rural property valuation. This process involves determining the price of
+                        rural properties such as farms and agricultural land, which serves various purposes including
+                        securing credit, property insurance, estate division, and property transactions.
+                    </p>
+                    <p class="text-muted-justified">
+                        To begin our project, we initiated by conducting a comprehensive literature review to gain valuable
+                        insights into the field. During this phase, we identified pertinent research papers specifically 
+                        addressing this issue within the Brazilian context. These papers not only shed light on critical 
+                        features and methodologies but also illuminated valuable considerations for tackling this complex 
+                        problem.
+                    </p>
+                    <p class="text-muted-justified">
+                        Subsequent to the literature review, we proceeded with an extensive exploration of publicly 
+                        available datasets related to the valuation of bare land. It's important to note that our foremost 
+                        challenge at this stage was the absence of a comprehensive property price database. To overcome this 
+                        problem, we implemented a web crawler to extract pricing information and property specifications 
+                        (e.g., location, area) from real estate listing websites. Furthermore, we conducted geocoding to 
+                        obtain latitude and longitude coordinates, thereby enriching our dataset with geographic attributes 
+                        such as terrain and altitude. During the data distribution analysis, we identified a significant 
+                        data concentration in the Southeast region of Brazil. We implemented a rigorous feature selection 
+                        process, enabling us to retain only the most pertinent data while eliminating noise. Additionally, 
+                        we conducted meticulous data cleaning and outlier removal to ensure the quality of our dataset.
+                    </p>
+                    <p class="text-muted-justified">
+                        One key aspect of our analysis involved examining the correlation between the value of bare land 
+                        and other features, such as prices of commodities such as soybeans, corn, and cattle. Over the 
+                        period of our study, we observed a decrease in commodity prices throughout the year, accompanied 
+                        by an increase in rural land prices. This negative correlation was not a suitable variable to serve 
+                        as a reliable predictor in our model.
+                    </p>
+                    <p class="text-muted-justified">
+                        In our pursuit of predicting rural property values using the chosen features, we conducted a series 
+                        of experiments employing diverse machine learning methodologies. As a result, we attained outcomes 
+                        that can be characterized as reasonably promising. Nevertheless, an important lesson that emerged 
+                        from our endeavors was the necessity to enhance data quality and broaden data coverage nationwide. 
+                        These enhancements are essential to elevate the precision of our predictive model.
+                    </p>
+                    <p class="text-muted-justified">
+                        Furthermore, we deployed a Restful API to provide an interface for internal applications to access 
+                        our model. This project was quite challenging due to the limited data we had to work with. My 
+                        experience as a researcher was essential in helping us navigate and overcome the obstacles we faced. 
+                        I'm incredibly proud of the dedication and hard work our team put into this project.
+                    </p>
                 </div>
             </div>
         </div>
-    </div>
-</div>
+    </section>
+
+    <!-- Footer-->
+    <div id="footer"></div>
+
+    <!-- Bootstrap core JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+    <!-- Third party plugin JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    
+    <script>
+        const body = ['footer'];
+        body.forEach(b => {
+            fetch(`../body/${b}.html`)
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById(`${b}`).outerHTML = data;
+                })
+                .catch(error => console.error(`Error loading ${b}:`, error));
+        });
+    </script>
+</body>
+</html>
