--- a/projects/similarity.html
+++ b/projects/similarity.html
@@ -1,43 +1,94 @@
-<div class="portfolio-modal modal fade" id="projectsModalSimilarity" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" /></div>
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-8">
-                        <div class="modal-body">
-                            <h2 class="text-uppercase">Text Similarity</h2>
-                            <p class="item-intro text-muted">A data science approach applied on legal text</p>
-                            <img class="img-fluid d-block mx-auto" src="assets/img/projects/similarity/logo.png"
-                                alt="" />
-                            <p class="text-muted-justified">                                    
-                                During my time as a data scientist at <a class="link" target="_blank" 
-                                href='https://ecoa.puc-rio.br/'>ECOA PUC-Rio</a> in 2019, I initiated a project with the 
-                                objective of assisting prosecutors in locating legal texts with similar contextual content. 
-                                This project involved in-depth analysis and exploration of data obtained from both the  
-                                <a class="link" target="_blank" href='http://www.mprj.mp.br'>Public Prosecution</a> and 
-                                <a class="link" target="_blank" href='http://www.tjrj.jus.br'>Court of Law</a> from Rio de Janeiro.
-                            </p>
-                            <p class="text-muted-justified">
-                                The documents, mainly in PDF format, underwent a text extraction process, followed by a meticulous 
-                                pattern identification and analysis. To construct a vector representation of these documents, 
-                                we explored various methodologies and ultimately opted for a <a class="link" target="_blank" 
-                                href='http://nilc.icmc.usp.br/embeddings'>pre-trained model using word embeddings</a> specifically 
-                                designed for Portuguese text, developed by USP (Universidade de São Paulo). 
-                            </p>
-                            <p class="text-muted-justified">
-                                We used cosine distance calculations to determine the similarity of texts and sorted the results accordingly.
-                                To make this feature more accessible, we transformed it into a RESTful API service, which streamlined the process
-                                for our users. The result is a collection of legal texts sorted in ascending order of cosine distance, making it
-                                easier to identify and access documents with similar contextual content. This improvement has increased the
-                                efficiency of the Public Prosecution of Rio de Janeiro.
-                            </p>
-                            <button class="btn btn-primary" data-dismiss="modal" type="button"><i
-                                    class="fas fa-times mr-1"></i>Close Project</button>
-                        </div>
-                    </div>
-                </div>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>About André Luiz</title>
+    <link rel="icon" type="image/x-icon" href="../assets/img/favicon.png" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v5.12.1/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="../css/styles.css" rel="stylesheet" />
+</head>
+
+<body id="page-top">
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-shrink" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand js-scroll-trigger" href="../index.html#page-top">Andre Luiz</a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars ml-1"></i></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav text-uppercase ml-auto">
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#about">About me</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#analyses">Analyses</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#publications">Publications</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#contact">Contact</a></li>
+                </ul>
             </div>
         </div>
-    </div>
-</div>
+    </nav>
+
+    <section class="page-section bg-white portfolio-section" id="projects">
+        <div class="container" style="margin-top: 27px;">
+            <div class="text-center">
+                <img class="img-fluid d-block mx-auto" src="../assets/img/projects/similarity/logo.png" alt="" />
+                <h2 class="section-heading text-uppercase">Text Similarity</h2>
+                <h3 class="section-subheading text-muted">A data science approach applied on legal text</h3>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-12">
+                <p class="text-muted-justified">                                    
+                    During my time as a data scientist at <a class="link" target="_blank" 
+                    href='https://ecoa.puc-rio.br/'>ECOA PUC-Rio</a> in 2019, I initiated a project with the 
+                    objective of assisting prosecutors in locating legal texts with similar contextual content. 
+                    This project involved in-depth analysis and exploration of data obtained from both the  
+                    <a class="link" target="_blank" href='http://www.mprj.mp.br'>Public Prosecution</a> and 
+                    <a class="link" target="_blank" href='http://www.tjrj.jus.br'>Court of Law</a> from Rio de Janeiro.
+                </p>
+                <p class="text-muted-justified">
+                    The documents, mainly in PDF format, underwent a text extraction process, followed by a meticulous 
+                    pattern identification and analysis. To construct a vector representation of these documents, 
+                    we explored various methodologies and ultimately opted for a <a class="link" target="_blank" 
+                    href='http://nilc.icmc.usp.br/embeddings'>pre-trained model using word embeddings</a> specifically 
+                    designed for Portuguese text, developed by USP (Universidade de São Paulo). 
+                </p>
+                <p class="text-muted-justified">
+                    We used cosine distance calculations to determine the similarity of texts and sorted the results accordingly.
+                    To make this feature more accessible, we transformed it into a RESTful API service, which streamlined the process
+                    for our users. The result is a collection of legal texts sorted in ascending order of cosine distance, making it
+                    easier to identify and access documents with similar contextual content. This improvement has increased the
+                    efficiency of the Public Prosecution of Rio de Janeiro.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer-->
+    <div id="footer"></div>
+
+    <!-- Bootstrap core JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+    <!-- Third party plugin JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    
+    <script>
+        const body = ['footer'];
+        body.forEach(b => {
+            fetch(`../body/${b}.html`)
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById(`${b}`).outerHTML = data;
+                })
+                .catch(error => console.error(`Error loading ${b}:`, error));
+        });
+    </script>
+</body>
+</html>
