--- a/projects/soybean-yield-forecast.html
+++ b/projects/soybean-yield-forecast.html
@@ -1,67 +1,119 @@
-<div class="portfolio-modal modal fade" id="projectsModalSoybeanYieldForecast" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" /></div>
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-8">
-                        <div class="modal-body">
-                            <h2 class="text-uppercase">Soybean Yield Forecast</h2>
-                            <p class="item-intro text-muted">Artificial Intelligence to Support Agribusiness </p>
-                            <img class="img-fluid d-block mx-auto" src="assets/img/projects/soybean-yield-forecast/logo.jpg" alt="" />
-                            <p class="text-muted-justified">
-                                As Data Science Manager at <a class="link" target="_blank" href='https://gaivota.ai/'>Gaivota</a> in 2021, I led 
-                                a important project early in my role. The project aimed to predict soybean yields for cities in Mato Grosso, 
-                                a renowned state in Brazil celebrated for its exceptional soybean productivity in the world. This topic is 
-                                an extensive problem in agriculture and one of the most interesting for farmers, industry, and government
-                                stakeholders for strategies that will lead to increased crop production. That yield is related to the amount
-                                of produced grains in a region. To increase this yield, farmers use several techniques, such as: selection
-                                of high-quality seeds, adequate soil preparation, application of fertilizers, use of efficient irrigation
-                                techniques and control of pests and diseases. Predicting agricultural productivity is a complex task that
-                                involves the analysis of several factors, such as climate, soil, technology and agricultural management
-                                practices. Predicting agricultural productivity is a multifaceted endeavor, involving the analysis of
-                                multiple variables such as climate, soil attributes, technological advancements, and agricultural management
-                                practices. Typically, mathematical and statistical models that account for these variables are employed.
-                                However, it's vital to recognize that these forecasts are estimates, and producers must remain prepared
-                                for unforeseen challenges, such as extreme weather events, diseases, and pest infestations.
-                            </p>
-                            <p class="text-muted-justified">
-                                Given that my team lacked prior experience in this domain, we conducted an extensive literature review of papers 
-                                published in the last five years (between 2016 and 2021). Our aim was to gain insights into methodologies for 
-                                predicting crop yields, critical information required for accurate predictions, and prevalent models used in 
-                                this context. The literature review adhered to a well-defined protocol, evaluating papers for key issues, 
-                                objectives, methodologies, case studies, and outcomes. Following a thorough analysis, we identified two papers 
-                                that stood out for their meaningful results and their provision of source code on GitHub (<a class="link" 
-                                target="_blank" href='https://github.com/JiaxuanYou/crop_yield_prediction'>paper 1</a> and 
-                                <a class="link" target="_blank" href='https://github.com/gabrieltseng/pycrop-yield-prediction'>
-                                paper 2</a>).
-                            </p>
-                            <p class="text-muted-justified">
-                                Subsequently, we compiled a comprehensive dataset comprising temperature records, satellite imagery, land cover
-                                and rainfall data, soil attributes, and municipal-level soybean production data. Our main goal was to forecast
-                                soybean yields in kilograms per hectare for 89 cities in Mato Grosso, focusing exclusively on this specific
-                                geographical area. Based on the selected papers, we implemented an ensemble model utilizing Deep Learning
-                                techniques, including Convolutional Neural Networks (CNN) and Random Forests (RF). Through meticulous
-                                experimentation with various data combinations and sliding window parameters, we achieved great results.
-                                To evaluate and quantify the model performance, we relied on established regression metrics such as Mean
-                                Absolute Percentage Error (MAPE) and Root Mean Square Error (RMSE).
-                            </p>
-                            <p class="text-muted-justified">
-                                Furthermore, we established an AWS-based pipeline to facilitate continuous data updates. This pipeline
-                                encompassed data storage in raw format, data cleansing, model training, soybean yield forecasting for each
-                                Mato Grosso city, and storage of these predictions in a relational database. We deployed a Restful API to
-                                provide an interface for internal applications to access our data. This project represented a formidable
-                                challenge, one that I'm particularly proud of. Its successful execution was a testament to the collaborative
-                                efforts of a multidisciplinary team of data scientists. It's worth noting that this project not only contributed
-                                to expanding our customer base but also showcased the company's product potential to a broader audience.
-                            </p>
+<html lang="en">
 
-                            <button class="btn btn-primary" data-dismiss="modal" type="button"><i
-                                    class="fas fa-times mr-1"></i>Close Project</button>
-                        </div>
-                    </div>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>About André Luiz</title>
+    <link rel="icon" type="image/x-icon" href="../assets/img/favicon.png" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v5.12.1/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="../css/styles.css" rel="stylesheet" />
+</head>
+
+<body id="page-top">
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-shrink" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand js-scroll-trigger" href="../index.html#page-top">Andre Luiz</a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars ml-1"></i></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav text-uppercase ml-auto">
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#about">About me</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#analyses">Analyses</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#publications">Publications</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#contact">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <section class="page-section bg-white portfolio-section" id="projects">
+        <div class="container" style="margin-top: 27px;">
+            <div class="text-center">
+                <img class="img-fluid d-block mx-auto" src="../assets/img/projects/soybean-yield-forecast/logo.jpg" alt="" />
+                <h2 class="section-heading text-uppercase">Soybean Yield Forecast</h2>
+                <h3 class="section-subheading text-muted">Artificial Intelligence to Support Agribusiness</h3>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-12">
+                    <p class="text-muted-justified">
+                        As Data Science Manager at <a class="link" target="_blank" href='https://gaivota.ai/'>Gaivota</a> in 2021, I led 
+                        a important project early in my role. The project aimed to predict soybean yields for cities in Mato Grosso, 
+                        a renowned state in Brazil celebrated for its exceptional soybean productivity in the world. This topic is 
+                        an extensive problem in agriculture and one of the most interesting for farmers, industry, and government
+                        stakeholders for strategies that will lead to increased crop production. That yield is related to the amount
+                        of produced grains in a region. To increase this yield, farmers use several techniques, such as: selection
+                        of high-quality seeds, adequate soil preparation, application of fertilizers, use of efficient irrigation
+                        techniques and control of pests and diseases. Predicting agricultural productivity is a complex task that
+                        involves the analysis of several factors, such as climate, soil, technology and agricultural management
+                        practices. Predicting agricultural productivity is a multifaceted endeavor, involving the analysis of
+                        multiple variables such as climate, soil attributes, technological advancements, and agricultural management
+                        practices. Typically, mathematical and statistical models that account for these variables are employed.
+                        However, it's vital to recognize that these forecasts are estimates, and producers must remain prepared
+                        for unforeseen challenges, such as extreme weather events, diseases, and pest infestations.
+                    </p>
+                    <p class="text-muted-justified">
+                        Given that my team lacked prior experience in this domain, we conducted an extensive literature review of papers 
+                        published in the last five years (between 2016 and 2021). Our aim was to gain insights into methodologies for 
+                        predicting crop yields, critical information required for accurate predictions, and prevalent models used in 
+                        this context. The literature review adhered to a well-defined protocol, evaluating papers for key issues, 
+                        objectives, methodologies, case studies, and outcomes. Following a thorough analysis, we identified two papers 
+                        that stood out for their meaningful results and their provision of source code on GitHub (<a class="link" 
+                        target="_blank" href='https://github.com/JiaxuanYou/crop_yield_prediction'>paper 1</a> and 
+                        <a class="link" target="_blank" href='https://github.com/gabrieltseng/pycrop-yield-prediction'>
+                        paper 2</a>).
+                    </p>
+                    <p class="text-muted-justified">
+                        Subsequently, we compiled a comprehensive dataset comprising temperature records, satellite imagery, land cover
+                        and rainfall data, soil attributes, and municipal-level soybean production data. Our main goal was to forecast
+                        soybean yields in kilograms per hectare for 89 cities in Mato Grosso, focusing exclusively on this specific
+                        geographical area. Based on the selected papers, we implemented an ensemble model utilizing Deep Learning
+                        techniques, including Convolutional Neural Networks (CNN) and Random Forests (RF). Through meticulous
+                        experimentation with various data combinations and sliding window parameters, we achieved great results.
+                        To evaluate and quantify the model performance, we relied on established regression metrics such as Mean
+                        Absolute Percentage Error (MAPE) and Root Mean Square Error (RMSE).
+                    </p>
+                    <p class="text-muted-justified">
+                        Furthermore, we established an AWS-based pipeline to facilitate continuous data updates. This pipeline
+                        encompassed data storage in raw format, data cleansing, model training, soybean yield forecasting for each
+                        Mato Grosso city, and storage of these predictions in a relational database. We deployed a Restful API to
+                        provide an interface for internal applications to access our data. This project represented a formidable
+                        challenge, one that I'm particularly proud of. Its successful execution was a testament to the collaborative
+                        efforts of a multidisciplinary team of data scientists. It's worth noting that this project not only contributed
+                        to expanding our customer base but also showcased the company's product potential to a broader audience.
+                    </p>
                 </div>
             </div>
         </div>
-    </div>
-</div>
+    </section>
+
+    <!-- Footer-->
+    <div id="footer"></div>
+
+    <!-- Bootstrap core JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+    <!-- Third party plugin JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    
+    <script>
+        const body = ['footer'];
+        body.forEach(b => {
+            fetch(`../body/${b}.html`)
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById(`${b}`).outerHTML = data;
+                })
+                .catch(error => console.error(`Error loading ${b}:`, error));
+        });
+    </script>
+</body>
+</html>
